--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ img {
 
 .advantages {
   text-align: center;
+  list-style: none;
 }
 
 .advantages-big-text {
@@ -236,6 +237,10 @@ img {
 
 .advantages-item p {
   line-height: 18px;
+}
+
+.logotypes-list {
+  list-style: none;
 }
 
 /*Footer*/
