--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ img {
   opacity: 0.3;
 }
 
-.cart-icon {
+.cart-pic {
   fill: var(--special-grey-cart);
 }
 
@@ -176,7 +176,7 @@ img {
 }
 
 .slider-pic-2 {
-  background-image: url(nerds-index-slide2.png);
+  background-image: url(img/nerds-index-slide2.png);
 }
 
 .slider-pic-3 {
@@ -268,6 +268,14 @@ img {
 
 .logotypes-list {
   list-style: none;
+}
+
+.logo-academy:hover {
+  
+}
+
+.logo-academy:focus {
+
 }
 
 /*Footer*/
