--- a/style.css
+++ b/style.css
@@ -461,6 +461,10 @@ img {
   border-color: var(--basic-coral-hover);
 }
 
+.button-modal {
+  border: none;
+}
+
 .button-close-cross {
   color: var(--basic-coral);
   opacity: 0.3;
@@ -532,6 +536,7 @@ img {
   font-size: 16px;
   line-height: 18px;
   background-color: var(--basic-grey);
+  border: none;
 }
 
 .sort-item {
@@ -614,7 +619,7 @@ img {
   background-color: var(--basic-grey-direct);
   box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
 }
-.pagination-item:active {
+.pagination-item-current {
   color: var(--basic-black);
   background-color: transparent;
   border: 3px solid var(--special-grey-border);
