--- a/style.css
+++ b/style.css
@@ -65,6 +65,26 @@ img {
   height: auto;
 }
 
+/* Grid */
+
+.page {
+  height: 100%;
+}
+
+.page-body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+}
+
+.index-container {
+  width: 1157px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 431px auto auto 184px;
+  gap: 40px;
+}
+
 /* Button */
 
 .button {
@@ -112,36 +132,38 @@ img {
 
 .directions-button-green {
   background-color: var(--basic-green);
+  border: none;
 }
 
 .directions-button-green:hover {
   background-color: var(--basic-green-hover);
+  border: none;
 }
 
 .directions-button-green:active {
   background-color: var(--basic-green-active);
   box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
-
+  border: none;
 }
 
 .directions-button-yellow {
   background-color: var(--basic-yellow);
-
+  border: none;
 }
 
 .directions-button-yellow:hover {
   background-color: var(--basic-yellow-hover);
-
+  border: none;
 }
 
 .directions-button-yellow:active {
   background-color: var(--basic-yellow-active);
   box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
-
+  border: none;
 }
 
 .project-button {
-
+  border: none;
 }
 
 .map-button {
@@ -152,6 +174,7 @@ img {
 
 .main-header {
   background-color: var(--basic-grey);
+
 }
 
 .main-header-logo:hover {
@@ -167,6 +190,8 @@ img {
   color: var(--basic-black);
   font-weight: 500;
   text-transform: uppercase;
+  display: grid;
+  grid-template-columns: 160px min-content 115px;
 }
 
 .site-navigation {
@@ -210,6 +235,9 @@ img {
 
 .main-slider {
   background-color: var(--basic-grey);
+  height: 431px;
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
 }
 
 .main-slider-list {
@@ -274,6 +302,8 @@ img {
 
 .container-about {
   border-top: 1px solid var(--basic-grey);
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
 }
 
 .about {
@@ -297,16 +327,25 @@ img {
 
 .advantages {
   text-align: center;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: 208px min-content auto;
 }
 
 .advantages-list {
   list-style: none;
 }
 
+.advantages-list img {
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
+}
+
 .advantages-big-text {
   color: var(--basic-black);
   font-weight: 700;
   text-transform: uppercase;
+  grid-column: 1 / -1;
+  grid-row: 2 / 3;
 }
 
 .advantages-number {
@@ -331,6 +370,7 @@ img {
   list-style: none;
   border-top: 1px solid var(--basic-grey);
   border-bottom: 1px solid var(--basic-grey);
+  grid-column: 1 / -1;
 }
 
 .logotypes-img {
